# bayesian-anomaly-detection

./: .gitignore  Makefile  README.md  README_ES.md  demo_script.sh  environment.yml  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
dataviz/: 01_data_exploration.py  02_feature_analysis.py  03_model_diagnostics.py  04_anomaly_results.py  05_evaluation_plots.py  06_full_report.py  __init__.py
docs/: DATASET_CARD.md  README.md
docs/assets/: bayesian_vs_classical.md  bayesiano_vs_clasico.md  model_comparison.md  posterior_predictive_scoring.md  uncertainty_vs_thresholds.md  unsw_nb15_dataset_description.md
docs/en/: 01_overview.md  02_theoretical_foundations.md  03_model_architecture.md  04_implementation_guide.md  05_api_reference.md  06_tutorial.md  README.md  case_study.md  executive_summary.md  mathematical_formulas.md  pipeline_explained.md  technical_report.md
docs/es/: 01_vision_general.md  02_fundamentos_teoricos.md  03_arquitectura_modelo.md  04_guia_implementacion.md  05_referencia_api.md  06_tutorial.md  README.md  case_study.md  executive_summary.md  mathematical_formulas.md  pipeline_explained.md  technical_report.md
notebooks/: 01_end_to_end_walkthrough.ipynb  02_unsw_nb15_real_data.ipynb  03_model_comparison.ipynb  04_alert_prioritization.ipynb  05_interview_prep_fortra.ipynb
outputs/benchmark/: benchmark_results.json  summary_metrics.csv
outputs/comparison/: comparison_metrics.csv
outputs/rare_attack_comparison/: unsw_nb15_comparison.csv
outputs/robustness/: robustness_results.json
outputs/triage/: alert_budget_curve.json  enriched_alerts.json  ranking_metrics.csv
outputs/unsw/: modeling_table.parquet
scripts/: alert_prioritization.py  benchmark.py  compare_both_regimes.py  create_unsw_diagnostics.py  cse_cic_ids2018_analysis.py  eda_pipeline_explainer.py  generate_diagrams.py  honest_bsad_analysis.py  multi_regime_comparison.py  operational_cost_analysis.py  retrain_unsw_4chains.py  robustness_analysis.py  train_rare_attack_model.py
src/bsad/: __init__.py  baselines.py  calibration.py  cli.py  config.py  io.py  pipeline.py  steps.py  (+1 more)
tests/: __init__.py  test_data_generator.py  test_evaluation.py  test_features.py  test_model.py  test_triage.py
(+26 files in other folders)
